Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -1310,7 +1310,7 @@
       },
       "source": [
         "CV = 5\n",
-        "rf_search = GridSearchCV(pipeline, param_grid, \n",
+        "rf_search = GridSearchCV(,pipeline, param_grid, \n",
         "                      cv=5,return_train_score = True,\n",
         "                      scoring = 'roc_auc').fit(X_train, y_train['output'].ravel())"
       ],
@@ -1392,7 +1392,7 @@
         "id": "F3CGmw6CiIW8"
       },
       "source": [
-        ""
+        "En la siguiente figura se observa el comportamiento del modelo para diferentes valores de max_depth. En la region de valores bajos puede obserbarse como la performance mejora al aumentar la profundidad maxima para cada arbol de mi bosque. Esto se debe a que a mayor profundidad el modelo tiene mas complejidad y logra asi adaptarse mejor al problema. En la region de valores altos de max_depth puede observarse como las curvas de train y validation se separan. Este compotamiento es un indicativo claro de que estamos generando overfiting en nuestro modelo. Para valores demasiado elevados de profundidad el modelo adquiere demasiada complejidad, causando que en el momento de entrenarse la solucion a la que se llega termine perdiendo generalidad."
       ]
     },
     {
@@ -1445,7 +1445,7 @@
         "id": "v2vuhnsliMFg"
       },
       "source": [
-        ""
+        "El variar el hiperparametro n_estimators no estaria teniendo un gran impacto en el comportamiento de la performance del modelo. Entrenar un solo arbol o entrenar 100 arboles en nuestro bosque solo impacta en una mejora en el tercer digito significativo."
       ]
     },
     {
@@ -1493,6 +1493,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "t3wTC8Ch8f-w"
+      },
+      "source": [
+        "Sobre este modelo se deberia seguir trabajando sobre los otros hiperparametros a los fines de buscar un mejor resultado. El hiperparametro max_depth es muy efectivo para controlar overfiting, pero a su vez suele ser muy rigido. Sabiendo que para una profundidad mayor a \"2\" el modelo empieza a tener problemas con la exploracion realizada, se podría explorar con profundidades de \"3\" buscando de evitar el overfiting. Es importante tener presente que los hiperparametros estan correlacionados, por lo que se esperaría que la nueva configuracion permita que solo algunos arboles puedan tener una profundidad mayor a 2 pero no todos, de lo contrario se llegaria otra vez a la situacion de overfiting.\n",
+        "Es importante tener presente que setear todos los posibles hiperparametros de entrada lleva a que el tiempo de computo del problema sea enorme."
       ]
     },
     {
