Creado mediante Colaboratory

--- a/notebooks/FAIRE-AI.ipynb
+++ b/notebooks/FAIRE-AI.ipynb
@@ -86,7 +86,7 @@
         "    prob = 0.3*sex+(0.2 if age>30 else 0.4)+(0.3 if purchase>100 else 0)\n",
         "    return int(random.random(size=1)<prob)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "\n",
         "data.head()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -228,7 +228,7 @@
         "sns.set_style(\"whitegrid\")\n",
         "%matplotlib inline"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -246,7 +246,7 @@
         "print(\"---\"*10)\n",
         "print(data.isnull().sum())"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "print(\"---\"*10)\n",
         "print(data['sex'].value_counts())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -307,7 +307,7 @@
         "data['sex'].value_counts(normalize=True).plot.bar()\n",
         "plt.title('SEX')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -359,7 +359,7 @@
         "plt.title('AGE')\n",
         "plt.legend()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +402,7 @@
         "print(\"---\"*10)\n",
         "print(data['output'].value_counts())"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -432,7 +432,7 @@
         "data['purchase'].plot.hist()\n",
         "plt.title('Purchase')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -487,7 +487,7 @@
         "sns.countplot(data=data,x='output')\n",
         "plt.title('Balance of Class')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -540,7 +540,7 @@
         "sns.countplot(data=data,x='output',hue='sex')\n",
         "plt.title('Balance of Class by \"sex\"')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -599,7 +599,7 @@
         "                 plot_kws={'alpha':0.1})\n",
         "g.fig.suptitle('Distribution of Cases for \"Male\" (sex=1)')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -647,7 +647,7 @@
         "                 height=4,plot_kws={'alpha':0.1})\n",
         "g.fig.suptitle('Distribution of Cases for \"Female\" (sex=0)')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -701,7 +701,7 @@
         "sns.clustermap(corr, cmap ='coolwarm', linewidths = 0.2,\n",
         "                    method = 'complete')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +757,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.ensemble import RandomForestClassifier"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,7 +770,7 @@
         "\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=SEED, stratify=y)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -807,7 +807,7 @@
         "preprocessor = ColumnTransformer(transformers=[('num', numeric_transformer, numeric_columns)],\n",
         "                                 remainder='passthrough')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -828,7 +828,7 @@
         "\n",
         "model = LogisticRegression(solver = 'liblinear',max_iter=1000)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +853,7 @@
         "    ('classificator',model)\n",
         "])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,7 +902,7 @@
         "  {'classificator__C':lr_C, 'classificator__penalty':reg}\n",
         "]"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -923,7 +923,7 @@
         "\n",
         "print(f'Quantity of configurations : {count_models_to_train(param_grid)}')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
         "                      cv=CV,return_train_score = True,\n",
         "                      scoring = 'roc_auc').fit(X_train, y_train['output'].ravel())"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -972,7 +972,7 @@
       "source": [
         "lr_search.best_estimator_['classificator']"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1000,7 +1000,7 @@
       "source": [
         "results = pd.DataFrame(lr_search.cv_results_)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1012,7 +1012,7 @@
         "l1_results = results.loc[results.param_classificator__penalty=='l1']\n",
         "l2_results = results.loc[results.param_classificator__penalty=='l2']"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1052,7 +1052,7 @@
         "    plt.ylabel('auc_roc')\n",
         "    plt.legend()"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1081,7 +1081,7 @@
         "plt.title('Regularization \"L1\"')\n",
         "plt.ylim(0.70,0.77)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1136,7 +1136,7 @@
         "plt.xscale('log')\n",
         "plt.ylim(0.70,0.77)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1202,7 +1202,7 @@
       "source": [
         "model = RandomForestClassifier(random_state=SEED,max_features=None)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1226,7 +1226,7 @@
         "    ('classificator',model)\n",
         "])"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1281,7 +1281,7 @@
         "\n",
         "print(f'Quantity of configurations : {count_models_to_train(param_grid)}')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1304,7 @@
         "                      cv=5,return_train_score = True,\n",
         "                      scoring = 'roc_auc').fit(X_train, y_train['output'].ravel())"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1331,7 +1331,7 @@
         "best_params = rf_search.best_estimator_['classificator'].get_params()\n",
         "best_params"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1373,7 +1373,7 @@
       "source": [
         "results = pd.DataFrame(rf_search.cv_results_)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1400,7 +1400,7 @@
         "plot_train_test(max_depth_results, parameter='max_depth', cv=CV, color='red',label='best')\n",
         "plt.title('Max-Depth (best = 2)')"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1456,7 +1456,7 @@
         "plt.title('N-Estimators (best = 100)')\n",
         "plt.ylim(0.72,0.78)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1500,7 +1500,7 @@
         "id": "YX9eCWOs_6bb"
       },
       "source": [
-        "## Testing\n",
+        "# Testing\n",
         "\n",
         "Having already built the models, the only thing left to do is to evaluate their performance in order to compare them. For that I build the ROC curves for each one and I calculate the area under the curves. To surprise, both models gave me exactly the same result of auc_roc up to the third significant figure. Even the behavior of both curves is very similar. Both start with a very good separation of the classes, and then move to another regime where neither model manages to separate the classes well.\n"
       ]
@@ -1513,7 +1513,7 @@
       "source": [
         "from sklearn.metrics import roc_curve, auc"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1530,7 +1530,7 @@
         "rf_best_model = rf_search.best_estimator_\n",
         "y_pred_rf = rf_best_model.predict_proba(X_test)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1551,7 +1551,7 @@
         "  plt.title('Receiver Operating Characteristic')\n",
         "  plt.legend(loc=\"lower right\")"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1569,7 +1569,7 @@
         "plot_roc_curve(y_test,y_pred_lr,'Linear Regression')\n",
         "plot_roc_curve(y_test,y_pred_rf,'Random Forest')"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
